[workspace]
resolver = "2"

members = ["p2r", "p2rjs", "p2r_decorator", "bin"]

[workspace.dependencies]
rustpython-parser = { git = "https://github.com/RustPython/Parser", rev = "9ce55ae" }

# https://github.com/RustPython/Parser/pull/107
# rustpython-ast = { git = "https://github.com/RustPython/Parser", rev = "9ce55ae", features = ["unparse"] }
