[package]
name = "p2r"
version = "0.2.0"
edition = "2021"

[dependencies]
rustpython-parser = { workspace = true }
prettyplease = { version = "0.2.15", default-features = false }
syn = { version = "2.0.38", default-features = false, features = ["parsing"] }
indoc = "2"

[dev-dependencies]
expect-test = "1.4.1"
