[package]
name = "p2r"
version = "0.2.0"
edition = "2021"

[dependencies]
rustpython-parser = { workspace = true }
prettyplease = { version = "0.2.16", default-features = false }
syn = { version = "2.0.49", default-features = false, features = ["parsing"] }
indoc = "2"

[dev-dependencies]
expect-test = "1.4.1"
